[tool]
[tool.poetry]
name = "topojoin"
version = "0.2.0"
homepage = "https://github.com/SimmonsRitchie/topojoin"
description = "Top-level package for TopoJoin."
authors = ["DSR <info@simmonsritchie.com>"]
readme = "README.rst"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
]
packages = [
    { include = "topojoin" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = "3.7"
click = "*"
importlib_metadata = "^1.7.0"

[tool.poetry.dev-dependencies]
bumpversion = "*"
coverage = "*"
flake8 = "*"
invoke = "*"
isort = "*"
pylint = "*"
pytest = "*"
sphinx = "*"
tox = "*"
yapf = "*"
bump2version = "^1.0.0"

[tool.poetry.scripts]
topojoin = 'topojoin.cli:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
